# skillmon

./: .clippy.toml  .git-blame-ignore-revs  .gitignore  .mcp.json  .prettierignore  .tool-versions  CLAUDE.md  CONTEXT-MAP.md  LICENSE  README.md  components.json  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  renovate.json  rustfmt.toml  tsr.config.json  turbo.json  typeshare.toml  vite.config.ts
.claude/: settings.json  settings.local.json
.claude/commands/: start-work.md
.claude/epics/esi-phase-1/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  008.md  009.md  010.md  epic.md
.claude/epics/esi-phase-2/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  epic.md  findings.md
.claude/epics/esi-phase-2.5/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  epic.md
.claude/epics/esi-phase-3/: 001.md  002.md  003.md  004.md  005.md  epic.md
.claude/hooks/: format-on-edit.sh  lint-and-typecheck.sh
.claude/prds/: esi-phase-2.5.md  esi-revamp.md
.claude/rules/: authentication.md  code-organization.md  database.md  development-guidelines.md  esi-client.md  features.md  frontend-patterns.md  notifications.md  project-setup.md  routing.md  sde-system.md  tauri-commands.md
.codegraph/: .gitignore
.cursor/rules/: authentication.mdc  code-organization.mdc  database.mdc  development-guidelines.mdc  esi-client.mdc  features.mdc  frontend-patterns.mdc  notifications.mdc  project-overview.mdc  project-setup.mdc  routing.mdc  sde-system.mdc  tauri-commands.mdc
.github/workflows/: build-adhoc-windows.yml  build-adhoc.yml  build-windows.yml  ci.yml  on-release-published.yml  release.yml
docs/agents/: domain.md
docs/context/: eve.md
e2e/: mcp-server.ts
plans/: overview.md  phase-0-foundation.md  phase-1-character-comparison.md  phase-2-simulation.md  phase-3-attribute-optimization.md  phase-4-reorder-optimization.md  phase-5.md
scripts/: generate-esi.sh  update-version.sh
src/: App.tsx  CONTEXT.md  index.css  main.tsx  router.tsx
src-tauri/: .env.sample  CONTEXT.md  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/docs/adr/: 0001-tauri-owned-esi-fetching.md  0002-app-settings-key-value-store.md  0003-plan-grouping-tree.md
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  002_esi_cache.sql  003_sde_schema.sql  004_character_attributes.sql  005_character_skills.sql  006_clones.sql  007_add_token_scopes.sql  008_locations.sql  009_unallocated_sp.sql  010_notifications.sql  011_accounts.sql  012_skill_plans.sql  013_fix_skill_plans_timestamps.sql  014_add_plan_auto_prereqs.sql  015_add_remaps.sql  016_add_character_omega_status.sql  017_enabled_features.sql  018_add_station_type_id.sql  019_app_settings.sql  020_plan_groups.sql
src-tauri/src/: clone_sync.rs  esi_helpers.rs  features.rs  lib.rs  main.rs  sde.rs  skill_queue.rs  tray.rs  ts_types.rs  utils.rs
src-tauri/src/auth/: callback_server.rs  mod.rs  oauth.rs  pkce.rs  types.rs
src-tauri/src/cache/: mod.rs
src-tauri/src/commands/: accounts.rs  attributes.rs  auth.rs  characters.rs  clones.rs  esi_snapshot.rs  location.rs  mod.rs  notifications.rs  overview.rs  plan_groups.rs  rate_limits.rs  remaps.rs  sde.rs  settings.rs  skill_plans.rs  skill_plans_utils.rs  skill_queues.rs  skills.rs
src-tauri/src/db/: accounts.rs  app_settings.rs  character_attributes.rs  character_skills.rs  characters.rs  clones.rs  enabled_features.rs  locations.rs  mod.rs  notifications.rs  operations.rs  plan_groups.rs  remaps.rs  sde.rs  skill_plans.rs  tokens.rs
src-tauri/src/esi/: cached.rs  mod.rs  scopes.rs
src-tauri/src/notifications/: mod.rs
src-tauri/src/notifications/checkers/: mod.rs  skill_queue_low.rs
src-tauri/src/refresh/: enrichment.rs  events.rs  mod.rs
src-tauri/src/skill_plans/: graph.rs  merge.rs  mod.rs  optimization.rs  plan_from_character.rs  simulation.rs
src-tauri/src/testdata/: character_2117051965_attributes.json  character_2117051965_skills.json  fixtures.rs  mod.rs  sde_cache.rs  test.skillmon.json
src/components/: AboutTab.tsx  AccountsWithoutTraining.tsx  AddCharacterDialog.tsx  AlphaIcon.tsx  Attributes.tsx  CharacterCard.tsx  CharacterDetail.tsx  CharacterList.tsx  CharacterPlanComparison.tsx  CharactersIndex.tsx  CharactersTab.tsx  Clones.tsx  DndTreeView.tsx  LocationDemo.tsx  LocationTable.tsx  LocationTableRow.tsx  LoginButton.tsx  NotificationBell.tsx  NotificationDrawer.tsx  NotificationSettings.tsx  Overview.tsx  OverviewTable.tsx  OverviewTableRow.tsx  RootLayout.tsx  SkillCategoryItem.tsx  SkillDetail.tsx  SkillDetailDrawer.tsx  SkillItem.tsx  SkillLevelPips.tsx  SkillQueue.tsx  Skills.tsx  TabLayout.tsx
src/components/Accounts/: AccountCard.tsx  AccountSidebar.tsx  AddCharacterToAccountMenu.tsx  CharacterContextMenu.tsx  CharacterPortrait.tsx  CreateAccountDialog.tsx  SortableAccountCard.tsx  SortableCharacterItem.tsx  SortableUnassignedCharacter.tsx  utils.ts
src/components/Clones/: CloneRow.tsx  ImplantIcon.tsx  index.tsx
src/components/NotificationDrawer/: CharacterFilter.tsx  NotificationItem.tsx  NotificationList.tsx  index.tsx
src/components/PlanTree/: CreateMergedPlanDialog.tsx  CreatePlanDialog.tsx  CreatePlanFromCharacterDialog.tsx  CreatePlanGroupDialog.tsx  DeletePlanDialog.tsx  DeletePlanGroupDialog.tsx  MergeIntoPlanDialog.tsx  PlanTreeDialogs.tsx  RenamePlanGroupDialog.tsx  SortableSourceRow.tsx  index.tsx
src/components/Remaps/: AddRemapDialog.tsx  RemapRow.tsx
src/hooks/: useSortableList.ts  useTickRerender.ts  useUndoRedo.ts
src/lib/: esiEvents.ts  notificationTypes.ts  planTree.test.ts  planTree.ts  planTreeDnd.ts  utils.test.ts  utils.ts
src/routes/: __root.tsx  about.tsx  characters.$characterId.$tab.tsx  characters.$characterId.component.tsx  characters.$characterId.tsx  characters.tsx  index.tsx  location.tsx  overview.tsx  plans.tsx  settings.tsx
src/stores/: esiStore.ts  notificationsStore.ts  planTreeDialogStore.ts  skillDetailStore.ts  undoRedoStore.test.ts  undoRedoStore.ts  updateStore.ts
src/types/: tauri.ts
(+79 files in other folders)
