[package]
name = "skillmon"
version = "0.11.0"
description = "A modern EVE Online skill monitoring and planning application."
authors = ["snipereagle1 <me@snipereagle.xyz>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "skillmon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dev-dependencies]
tempfile = "3"
lazy_static = "1.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
anyhow = "1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
futures-util = "0.3"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
jsonwebtoken = "9"
chrono = "0.4"
urlencoding = "2"
url = "2"
axum = "0.7"
hyper = { version = "1", features = ["server", "http1", "http2"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
validator = { version = "0.18", features = ["derive"] }
http = "1"
oas3-gen-support = "0.22"
serde_plain = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
quick-xml = "0.37"
dotenvy = "0.15.7"
tauri-plugin-updater = "2"
