[package]
name = "skillmon"
version = "0.22.0"
description = "A modern EVE Online skill monitoring and planning application."
authors = ["snipereagle1 <me@snipereagle.xyz>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
e2e-testing = ["tauri-plugin-playwright"]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "skillmon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dev-dependencies]
tempfile = "3.27.0"
lazy_static = "1.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
log = "0.4"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
typeshare = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }
anyhow = "1.0.102"
async-trait = "0.1.89"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
futures-util = "0.3"
base64 = "0.22.1"
sha2 = "0.10"
rand = "0.9"
jsonwebtoken = "10"
chrono = "0.4.45"
urlencoding = "2"
url = "2"
axum = "0.7"
hyper = { version = "1", features = ["server", "http1", "http2"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
validator = { version = "0.18", features = ["derive"] }
http = "1"
oas3-gen-support = "0.22"
serde_plain = "1"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
quick-xml = "0.37"
dotenvy = "0.15.7"
tauri-plugin-updater = "2"
tauri-plugin-playwright = { version = "0.1", optional = true }
