[package]
name = "skillmon"
version = "0.22.0"
description = "A modern EVE Online skill monitoring and planning application."
authors = ["snipereagle1 <me@snipereagle.xyz>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
e2e-testing = ["tauri-plugin-playwright"]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "skillmon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dev-dependencies]
tempfile = "3.27.0"
lazy_static = "1.5.0"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }
[dependencies]
tauri = { version = "2.11.2", features = ["tray-icon", "image-png"] }
log = "0.4.32"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-opener = "2.5.4"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-single-instance = "2.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
typeshare = "1.0.5"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-native-tls", "sqlite"] }
anyhow = "1.0.102"
async-trait = "0.1.89"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
futures-util = "0.3.32"
base64 = "0.22.1"
sha2 = "0.11.0"
rand = "0.10"
jsonwebtoken = "10.4.0"
chrono = "0.4.45"
urlencoding = "2.1.3"
url = "2.5.8"
axum = "0.8.9"
hyper = { version = "1.10.1", features = ["server", "http1", "http2"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["cors"] }
validator = { version = "0.20.0", features = ["derive"] }
http = "1.4.2"
oas3-gen-support = "0.26.1"
serde_plain = "1.0.2"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
quick-xml = "0.40"
dotenvy = "0.15.7"
tauri-plugin-updater = "2.10.1"
tauri-plugin-playwright = { version = "0.4.0", optional = true }
